--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,21 +1,59 @@
-// Bootstrap configuration part 1 (banner)
+@charset "UTF-8";
+
+/*!
+* main.scss/main.css
+* Compiled main Sass/CSS entry point importing all other used stylesheets.
+* Copyright © 2025 bitski
+*
+* Licensed under the MIT License.
+*/
+
+// 1. Bootstrap configuration
+//
+// 1.1 Bootstrap configuration part 1 (banner)
 @import "vendors/bootstrap/bootstrap-configuration-part1";
 
-// Theme variables
+// 1.2 Bootstrap theme variables
 @import "bitski-wp-theme-variables";
 
-// Bootstrap configuration part 2 (variables)
+// 1.3 Bootstrap configuration part 2 (variables)
 @import "vendors/bootstrap/bootstrap-configuration-part2";
 
-// Theme maps
+// 1.4 Bootstrap theme maps
 @import "bitski-wp-theme-maps";
 
-// Bootstrap configuration part 3 (maps, mixins, utilities)
+// 1.5 Bootstrap configuration part 3 (maps, mixins, utilities)
 @import "vendors/bootstrap/bootstrap-configuration-part3";
 
-// Bootstrap components
+
+// 2. Bootstrap components
 @import "bootstrap-components";
 
-// Theme styles
 
-@import "../fonts/fontawesome/css/all.min.css";
+// 3. Theme styles
+// Structured in 7-1 pattern.
+//
+// 3.1 Vendors
+// Use @use to import the vendors entry point only if none of the vendors
+// use CSS files or internal @import statements (e.g., Bootstrap 5 uses @import).
+// Use @import if they do.
+//@import "vendors/vendors";
+@use "vendors/vendors";
+
+// 3.2 Abstracts
+@use "abstracts/abstracts";
+
+// 3.3 Base
+@use "base/base";
+
+// 3.4 Layout
+@use "layout/layout";
+
+// 3.5 Components
+@use "components/components";
+
+// 3.6 Pages
+@use "pages/pages";
+
+// 3.7 Themes
+@use "themes/themes";
