refactor(styles): update comment to clarify purpose of _pages.scss, add _vendors.scss

--- a/assets/scss/pages/_pages.scss
+++ b/assets/scss/pages/_pages.scss
@@ -1,5 +1,5 @@
 // pages/_pages.scss
 //
-// All styles relating to a certain theme.
+// All styles relating to a certain page.
 @forward "home";
 @forward "static";
