refactor(typo): refine fluid typography calculations with slope variable to enhance readability and maintainability

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -2,6 +2,7 @@
 @use "sass:math";
 
 html {
+  // Sass build-time calculations.
   $theme-font-size-base: 1rem; // 1 * 16px = 16px
   $theme-font-size-max: 1.125rem; // 1.125 * 16px = 18px
   $theme-font-size-diff: math.div($theme-font-size-max - $theme-font-size-base, 1rem);
@@ -10,9 +11,14 @@ html {
   $theme-content-width-max: 1200px;
   $theme-content-width-diff: $theme-content-width-max - $theme-content-width-base;
 
+  $theme-font-size-slope: math.div($theme-font-size-diff * 16px, $theme-content-width-diff);
+
+  // CSS run-time calculations in the browser.
+  //
+  // Dynamic font size depending on viewport width.
   font-size: clamp(
       $theme-font-size-base,
-      calc(#{$theme-font-size-base} + #{$theme-font-size-diff} * 16px * (100vw - #{$theme-content-width-base}) / #{$theme-content-width-diff}),
+      calc(#{$theme-font-size-base} + #{$theme-font-size-slope} * (100vw - #{$theme-content-width-base})),
       $theme-font-size-max
   );
 }
